Updated dist.cmake and build

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-# Copyright (C) 2007-2009 LuaDist.
+# Copyright (C) 2007-2011 LuaDist.
 # Created by Peter Kapec
 # Redistribution and use of this file is allowed according to the terms of the MIT license.
 # For details see the COPYRIGHT file distributed with LuaDist.
@@ -9,7 +9,8 @@ CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
 INCLUDE(dist.cmake)
 
 # Install all files and documentation
-INSTALL (FILES date.lua DESTINATION ${INSTALL_LMOD})
-INSTALL (FILES mkcalendar.lua mkisocal.lua DESTINATION ${INSTALL_BIN})
-INSTALL (FILES README DESTINATION ${INSTALL_DATA})
-INSTALL (FILES date.doc.htm date.doc.chm DESTINATION ${INSTALL_DOC})
+INSTALL_LUA_MODULE(date date.lua)
+INSTALL_LUA_EXECUTABLE(mkcalendar mkcalendar.lua)
+INSTALL_LUA_EXECUTABLE(mkisocal mkisocal.lua)
+INSTALL_DATA(README)
+INSTALL_DOC(date.doc.htm date.doc.chm)
