New cmake macros

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,16 +1,17 @@
-# Copyright (C) 2007-2011 LuaDist.
-# Created by Peter Kapec
+# Copyright (C) 2007-2012 LuaDist.
+# Created by Peter Kapec, Peter Drahoš
 # Redistribution and use of this file is allowed according to the terms of the MIT license.
 # For details see the COPYRIGHT file distributed with LuaDist.
 # Please note that the package source code is licensed under its own license.
 
-PROJECT(luadate NONE)
-CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
-INCLUDE(dist.cmake)
+project ( luadate NONE )
+cmake_minimum_required ( VERSION 2.8 )
+include ( cmake/dist.cmake )
+include ( lua )
 
 # Install all files and documentation
-INSTALL_LUA_MODULE(date date.lua)
-INSTALL_LUA_EXECUTABLE(mkcalendar mkcalendar.lua)
-INSTALL_LUA_EXECUTABLE(mkisocal mkisocal.lua)
-INSTALL_DATA(README)
-INSTALL_DOC(date.doc.htm date.doc.chm)
+install_lua_module ( date date.lua )
+install_lua_executable ( mkcalendar mkcalendar.lua )
+install_lua_executable ( mkisocal mkisocal.lua )
+install_data ( README )
+install_doc ( date.doc.htm date.doc.chm )
